# AssetInventory

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_clang.bat  compile_commands.json  download_deps.bat
.cache/clangd/index/: WinUser.h.4A76A544DC57F47C.idx  Windows.h.2E62141895691411.idx  __msvc_bit_utils.hpp.97BAA8206914CF8C.idx  __msvc_chrono.hpp.AF78119EC9173129.idx  __msvc_heap_algorithms.hpp.2345D52DA25713FB.idx  __msvc_iter_core.hpp.82B70AA8139CDC4D.idx  __msvc_minmax.hpp.9B1C43E43B4B8798.idx  __msvc_ostream.hpp.61065EEA8BDD7941.idx  __msvc_sanitizer_annotate_container.hpp.29015C97A3C6A03C.idx  __msvc_string_view.hpp.B0561AA2CA08016D.idx  __msvc_system_error_abi.hpp.6FA05955F1D030E5.idx  __msvc_threads_core.hpp.03DAC116F4B16A3A.idx  __msvc_xlocinfo_types.hpp.238EB19AD22D316E.idx  __stdarg___gnuc_va_list.h.5A40F7A732C3528E.idx  __stdarg___va_copy.h.1D694FAC93383929.idx  __stdarg_header_macro.h.48093A6EFA390493.idx  __stdarg_va_arg.h.C76F8B35DC5A1A18.idx  __stdarg_va_copy.h.B880E5F9C6B5134A.idx  __stdarg_va_list.h.459929C6D55E1E8A.idx  __stddef_header_macro.h.ACAA98BE54C80915.idx  __stddef_max_align_t.h.EAC5C9C3359F3AD7.idx  __stddef_null.h.EBE99EF0DAA26E5E.idx  __stddef_nullptr_t.h.862938CE7788B369.idx  __stddef_offsetof.h.F77396301F3EECD4.idx  __stddef_ptrdiff_t.h.A6DB4BEF4FEC0249.idx  __stddef_size_t.h.D1DE45778E9C0464.idx  __stddef_wchar_t.h.28F9D65361956397.idx  __wmmintrin_aes.h.AEC931F7DC7BABF6.idx  __wmmintrin_pclmul.h.F40310977ADFCFB2.idx  adcintrin.h.2664BAC81694FA3B.idx  adxintrin.h.71D8E1617C6B4A52.idx  algorithm.B6FAB8190DA52962.idx  ammintrin.h.EE54A3238E5EAD8D.idx  amxavx512intrin.h.A192C139DCB727A1.idx  amxbf16transposeintrin.h.F17E060EB36BBD3E.idx  amxcomplexintrin.h.C5D44E35598DA22E.idx  amxcomplextransposeintrin.h.FAD4A215DE293C1B.idx  amxfp16intrin.h.538E479DCDDC4C50.idx  amxfp16transposeintrin.h.F06AC82CAA426567.idx  amxfp8intrin.h.7748E86B34259B15.idx  (+303 more)
db/: assets.db
images/: texture.pngZone.Identifier
readmes/: DATABASE_README.md  FILE_WATCHER_README.md  dear_cursor.md
src/: asset_database.cpp  asset_database.h  asset_index.cpp  asset_index.h  file_watcher.cpp  file_watcher.h  file_watcher_polling.cpp  file_watcher_windows.cpp  inspect_db.cpp  main.cpp  theme.h
tests/: test_database.cpp  test_file_watcher.cpp
